--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@ content="width=device-width, initial-scale=1.0"/>
 							href="mailto:info@devstudio.com"
 						><svg class="icon-envelope" width="16" height="12">
                 <use href="./images/icons.svg#icon-envelope"></use>
-              </svg>info@devstudio.com</a>
+</svg>info@devstudio.com</a>
 					</li>
 					<li class="header-item">
 						<a
@@ -55,11 +55,11 @@ content="width=device-width, initial-scale=1.0"/>
 			</div>
 		</header>
 		<!--Hero-->
-	<main>
+		<main>     
 <section class="section">
 	<div class="container">
-					<h1 class="filter-title visually-hidden">Наші роботи</h1>
-					<ul class="filter list">
+	<h1 class="filter-title visually-hidden">Наші роботи</h1>
+	<ul class="filter list">
 						<li class="filter-item">
 							<button
 								type="button"
@@ -103,7 +103,7 @@ content="width=device-width, initial-scale=1.0"/>
 					</ul>
 	<ul class="portfolio-list list">
 	<li class="portfolio-list-item">
-	<a class="postfolio-list-link link" href="">
+	<a class="portfolio-list-link link" href="">
 	<div class="portfolio-list-wrap">
 	<img class="portfolio-list-image" src="./images/portfolio1.jpg" alt="Відкитий ноутбук із сайтом технокряк" width="370" height="294"/>
 	<p class="portfolio-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
@@ -116,7 +116,7 @@ content="width=device-width, initial-scale=1.0"/>
 						</li>
 						<li class="portfolio-list-item">
 							<a
-								class="postfolio-list-link link"
+								class="portfolio-list-link link"
 								href=""
 							>
 							<div class="portfolio-list-wrap">
@@ -140,7 +140,7 @@ content="width=device-width, initial-scale=1.0"/>
 						</li>
 						<li class="portfolio-list-item">
 							<a
-								class="postfolio-list-link link"
+								class="portfolio-list-link link"
 								href=""
 							>
 							<div class="portfolio-list-wrap">
@@ -164,7 +164,7 @@ content="width=device-width, initial-scale=1.0"/>
 						</li>
 						<li class="portfolio-list-item">
 							<a
-								class="postfolio-list-link link"
+								class="portfolio-list-link link"
 								href=""
 							>
 					<div class="portfolio-list-wrap">
@@ -188,7 +188,7 @@ content="width=device-width, initial-scale=1.0"/>
 						</li>
 						<li class="portfolio-list-item">
 							<a
-								class="postfolio-list-link link"
+								class="portfolio-list-link link"
 								href=""
 							>
 							<div class="portfolio-list-wrap">
@@ -212,7 +212,7 @@ content="width=device-width, initial-scale=1.0"/>
 						</li>
 						<li class="portfolio-list-item">
 							<a
-								class="postfolio-list-link link"
+								class="portfolio-list-link link"
 								href=""
 							>
 							<div class="portfolio-list-wrap">
@@ -234,7 +234,7 @@ content="width=device-width, initial-scale=1.0"/>
 						</li>
 						<li class="portfolio-list-item">
 							<a
-								class="postfolio-list-link link"
+								class="portfolio-list-link link"
 								href=""
 							>
 								<div class="portfolio-list-wrap">
@@ -262,7 +262,7 @@ content="width=device-width, initial-scale=1.0"/>
 						</li>
 						<li class="portfolio-list-item">
 							<a
-								class="postfolio-list-link link"
+								class="portfolio-list-link link"
 								href=""
 							>
 							<div class="portfolio-list-wrap">
@@ -290,7 +290,7 @@ content="width=device-width, initial-scale=1.0"/>
 						</li>
 						<li class="portfolio-list-item">
 							<a
-								class="postfolio-list-link link"
+								class="portfolio-list-link link"
 								href=""
 							>
 							<div class="portfolio-list-wrap">
