--- a/index.html
+++ b/index.html
@@ -455,6 +455,19 @@
             </li>
           </ul>
         </div>
+      <div class="footer-submit">
+        <h3 class="submit-title">Підпишіться на розсилку</h3>
+        <form class="footer-form">
+            <div class="footer-form-wrap">
+            <label for="user-email"></label>
+            <input type="text" name="user-email" placeholder="E-mail" class="footer-input">
+            
+            <button type="submit" class="footer-button-submit">Підписатися<svg class="submit-btn-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-icon-send" class="icon-submit"></use>
+                </svg>
+            </button>
+            </div>
+        </form>
       </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
